AChecker test : fixed low-contrast text on price element on index.html

--- a/css/style.css
+++ b/css/style.css
@@ -83,5 +83,5 @@ h1 {
 }
 
 .photographers-section .price {
-    color: gray;
+    color: var(--black);
 }
